sentinel-macros/tests/compile_fail/no_primary_key.rs
use sentinel_core::Model;

#[derive(Model)]
#[sentinel(table = "users")]
pub struct User {
    pub id: i64,
    pub email: String,
}

fn main() {}
