sentinel-macros/tests/compile_fail/no_primary_key.stderr
error: no field marked with #[sentinel(primary_key)] — add it to exactly one field
 --> tests/compile_fail/no_primary_key.rs:5:12
  |
5 | pub struct User {
  |            ^^^^
